infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector: # step 1. Instruct pod 
    matchLabels:
      app: tickets
  template: # get config to create path
    metadata:
      labels:
        app: tickets
    spec:
      containers: # designate container that is going to be running the pod
        - name: tickets
          image: maria12/tickets
---
apiVersion: v1 #service to allow  communicate with pod
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets #pod name; that i defined above
  type: ClusterIP
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
